--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "test": "mocha tests/**/*$NAME*test.ts --exit"
+    "dev": "ts-node-dev src/server.ts",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -28,10 +28,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.2.0",
     "sinon": "^15.2.0",
-    "tsx": "^3.12.7",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
