--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.2",
     "@types/sinon": "^10.0.15",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
