--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -14,6 +14,7 @@
         "project": "./tsconfig.json"
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
     }
 }
