--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -15,6 +15,7 @@
     },
     "rules": {
         "no-console": "off",
-        "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
+        "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
+        "import/prefer-default-export": "off"
     }
 }
