--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
