--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,6 @@ COPY package*.json .
 RUN npm i
 RUN chown -R node:node /app
 USER node
-EXPOSE 3001
-COPY ./backend .
+EXPOSE 3000
+COPY ./frontend .
 CMD ["npm", "start"]
