--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,8 +2,8 @@ FROM node:alpine3.18
 WORKDIR /app
 COPY package*.json .
 RUN npm i
-RUN chown -R node:node /app
-USER node
-EXPOSE 3000
 COPY ./frontend .
-CMD ["npm", "start"]
+RUN chown -R node:node /app
+EXPOSE 3000
+USER node
+CMD ["npm", "start""]
