--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:w": "jest --watch"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -21,5 +23,16 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
