CHORE: added import rule to eslint
dont need tsx extension import

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -9,5 +9,14 @@
     "airbnb-base",
     "plugin:jest-dom/recommended",
     "plugin:testing-library/react"
-  ]
+  ],
+  "rules": {
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "tsx": "never"
+      }
+    ]
+  }
 }
