--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -15,7 +15,8 @@
       "error",
       "ignorePackages",
       {
-        "tsx": "never"
+        "tsx": "never",
+        "ts": "never"
       }
     ]
   }
