CHORE: added typescript eslint
find some warnings about not using parameters when declaring types

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,8 +8,12 @@
     "next/core-web-vitals",
     "airbnb-base",
     "plugin:jest-dom/recommended",
-    "plugin:testing-library/react"
+    "plugin:testing-library/react",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
+  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "import/extensions": [
       "error",
