--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,11 +4,12 @@
     "module": "commonjs",
     "baseUrl": "./",
     "paths": {
+      "@types": ["src/types/index.ts"],
       "@src/*": ["src/*"],
       "@errors/*": ["src/errors/*"],
       "@middlewares/*": ["src/middlewares/*"],
       "@services/*": ["src/services/*"],
-      "@types": ["src/types/index.ts"]
+      "@models/*": ["src/models/*"],
     },
     "rootDirs": ["./src", "./tests"],
     "outDir": "./dist",
