--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,7 @@
       "@types": ["src/types/index.ts"],
       "@src/*": ["src/*"],
       "@errors/*": ["src/errors/*"],
+      "@controllers/*": ["src/controllers/*"],
       "@middlewares/*": ["src/middlewares/*"],
       "@services/*": ["src/services/*"],
       "@models/*": ["src/models/*"],
